--- a/templates/casc-bundle/template.yaml
+++ b/templates/casc-bundle/template.yaml
@@ -7,14 +7,15 @@ parameters:
   - name: repoOwner
     type: string
     displayName: GitHub Organization
+    defaultValue: nac-declarative-pipeline-12-5-2022
   - name: repository
     type: string
     displayName: GitHub Repository
-    defaultValue: cloudbees-ci-config-bundle
+    defaultValue: controller
   - name: githubCredentialId
     displayName: GitHub Credential ID
     type: CREDENTIALS
-    defaultValue: cloudbees-ci-workshop-github-app
+    defaultValue: cloudbees-ci-pipeline-workshop-github-app
 multibranch:
   markerFile: .markerfile
   branchSource:
@@ -41,3 +42,4 @@ multibranch:
             - stage:
                 verbosity: "failed"
             - "junit"
+
